--- a/templates/claim/_banner.html.twig
+++ b/templates/claim/_banner.html.twig
@@ -1,8 +1,12 @@
 <!-- DEBUT Driver Controller TEMPLATES banner -->
-<section class="claim--banner" id="banner"
+<section class="banner" id="claim--banner"
     style="background-image:url({{ asset(sImgPath ~'banner/claim.jpg') }});"
 >
     <H1>PROGRAMMER UNE COURSE</H1>
     
 </section>
+
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('_flash.html.twig') }}
+
 <!-- FIN Profile banner -->
