--- a/templates/registration/driver.html.twig
+++ b/templates/registration/driver.html.twig
@@ -8,7 +8,7 @@
     {{ include('_flash.html.twig') }}
 
     <div class="paragraph--large" method="post"> 
-        <h1 class="title--h2">Enregistrez-vous : <small class="small-title-message">(* champs obligatoire)</small></h1>
+        <h1 class="title--h2">Vos informations professionnelles :</h1>
         <!-- *** DEBUT de la Carte3D *** -->
         <div class="card--3D-vertical">
 
@@ -67,6 +67,7 @@
                 <!-- <a href="https://www.francecompetences.fr/recherche/rs/3864/">Consulter les Conditions Générales d'Utilisation</a> -->
 
             </form><!-- ** FIN DU FORMULAIRE ** -->
+            <small style="color:red;">(* champs obligatoire)</small>
         </div><!-- FIN de la Carte3D -->
     </div>
 {% endblock %}
