--- a/templates/remarkableplace/_form.html.twig
+++ b/templates/remarkableplace/_form.html.twig
@@ -29,8 +29,8 @@
             <tr>
                 <th style="width:2%;"></th>
                 <th style="width:35%;"><label class="required" for="inputlabel">Libellé</label></th>
-                <th>Département</th>
-                <th>Type de lieu</th>
+                <th><label class="required" for="claim_form_to_departments">Département</label></th>
+                <th><label class="required" for="claim_form_to_typeplaces">Type de lieu</label></th>
                 <th style="width:15%;"><label>Actions</label></th>
             </tr>
         </thead>
