--- a/templates/_flash.html.twig
+++ b/templates/_flash.html.twig
@@ -1,6 +1,12 @@
 <div class="mt-3 mx-3">
     {% for flash in app.flashes('information') %}
-    <div class="alert alert-info mx-3 my-1" role="alert">{{ flash }}</div>
+    <div class="alert alert-info mx-3 my-1" role="alert">{{ flash }}
+        <!-- Possibilité d'introduire un bouton dans le ruban de message -->
+        {% if null %}
+        &emsp;
+        <a class="btn-sm btn-danger" href="{{ path('security_logout') }}">Se déconnecter</a>
+        {% endif %}
+    </div>
     {% endfor %}
     {% for flash in app.flashes('success') %}
     <div class="alert alert-success mx-3 my-1" role="alert">{{ flash }}</div>
