--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,15 +15,6 @@
         <link rel="SHORTCUT ICON" type="image/png" href="{{ asset(sImgPath ~ 'banner/favicon.png') }}"/>
         <!-- <link rel="icon" type="image/png" href="{{ asset(sFaviconFullname) }}"/> -->
         <title>{% block title %}2 Wheels 4 Motion{% endblock %}</title>
-        
-
-        <!-- API Google MAPS (INUTILE) -->        
-        <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-        <script src="https://www.gstatic.com/external_hosted/handlebars/v4.7.6/handlebars.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
-        <!-- <link href="locatorplus.css" rel="stylesheet"> -->
-        <!-- <script src="locatorplus.js"></script> -->
-
 
         {# Run `composer require symfony/webpack-encore-bundle`
             and uncomment the following Encore helpers to start using Symfony UX
@@ -46,93 +37,83 @@
         {% else %}
         <header id="section--header">
         {% endif %}
-            <div class="align-self-end mt-1 mr-3">
-                {% if app.user %}
-                <b>Bonjour et bienvenue {{ app.user.firstname }}</b>
-                {% else %}
-                <b style="color:red;font-size:1.5em;">Bonjour, vous n'êtes pas connecté</b>
-                {% endif %}
-            </div>
             <!-- Container nécessaire pour occuper 100% de la largeur du Header -->
-            <div class="container--nav">
-                <!-- DEBUT Logo & Marque -->
-                <div id="nav--brand">
-                    <a href="{{ path('homepage_index') }}"><img class="nav--logo" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a>
-                    <div class="nav--words">
-                        <h4>2Wheels4Motion:</h4>
-                        <h5 class="ml-2">"Les transferts qui (r)assurent"</h5>
+            <div class="d-flex flex-row col-12 justify-content-between pt-1"><!--  class="container--nav bor3" -->
+                <!-- Logo & Marque -->
+                <div class="d-flex flex-column col-3 pl-0">
+                    <div id="nav--brand bor1">
+                        <a href="{{ path('homepage_index') }}"><img class="nav--logo pt-2" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a>
                     </div>
                 </div>
-                <!-- DEBUT Menu de navigation -->
-                <div class="nav--bar navbar navbar-expand-lg navbar-light"><!--  bg-dark"> -->
-                    <!-- DEBUT bouton "Burger" -->
-                    <button class="navbar-toggler" type="button" title="BurgerButton" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <!-- FIN bouton "Burger" -->
-                    <div class="collapse navbar-collapse nav--menu">
-                        <!-- Menus 'permanents' -->
-                        <ul class="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="{{ path('homepage_index') }}">
-                                    Le moto-taxi
-                                </a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="{{ path('driver_presentation') }}">
-                                    Les pilotes
-                                </a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="{{ path('flatrate_index') }}">
-                                    Tarification/Paiement
-                                </a>
-                            </li>
-                        </ul>
-                        <!-- * Menus 'contextuels' * -->
-                        {# Si l'utilisateur EST DEJA identifié #}
-                        <!-- Menus 'contextuels' -->
-                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                        <!-- {#{% if app.user %}#} -->
-                        <ul class="navbar-nav ml-0">
-                            <!-- page(s) profil utilisateur -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('profile_user', {'id': app.user.id}) }}">
-                                    <i class="ri-account-circle-line"></i>
-                                    &ensp;{{ app.user.firstname }} {{ app.user.lastname }}
-                                </a>
-                            </li>
-                            <!-- page(s) profil administrateur -->
-                            {% if is_granted("ROLE_ADMIN") %}
-                            <li class="nav-item ">
-                                <!--dropdown">
-                                <a class="nav-link dropdown-toggle" href="{{ path('profile_user', {'id': app.user.id}) }}" id="navbarDropdown" role="button" data-toggle="dropdown">
-                                -->
-                                <a class="nav-link" href="{{ path('admin_pending') }}">
-                                    <i class="ri-admin-line"></i>
-                                    Administration
-                                </a>
-                            </li>
-                            {% endif %}
-                            <!-- Lien de déconnexion -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('security_logout') }}">
-                                    <i class="ri-logout-circle-r-line"></i>&ensp;Déconnexion
-                                </a>
-                                <!-- <a class="nav-link" href="{#{{ path('security_logout') }}#}">Déconnexion</a> -->
-                            </li>
-                        </ul>
-                        <!-- Si l'utilisateur N'est PAS encore identifié -->
+                <div class="d-flex flex-column col-9">
+                    <!-- Ligne message personnalisé -->
+                    <div class="align-self-end">
+                        {% if app.user %}
+                        <b>Bonjour et bienvenue {{ app.user.firstname }}</b>
                         {% else %}
-                        <ul class="navbar-nav ml-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('security_login') }}">
-                                    <i class="ri-login-box-line"></i>&ensp;Connexion
-                                </a>
-                            </li>
-                        </ul>
+                        <b style="color:red;font-size:1em;">Bonjour, vous n'êtes pas connecté</b>
                         {% endif %}
                     </div>
+                    <!-- Titre du site -->
+                    <div class="nav--words">
+                        <h5>2Wheels4Motion:</h5>
+                        &ensp;
+                        <h6>"Les transferts qui (r)assurent"</h6>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Menu de navigation -->
+            <div class="navbar navbar-expand-lg navbar-light col-12 p-0 m-0">
+                <!-- DEBUT bouton "Burger" -->
+                <button class="navbar-toggler" type="button" title="BurgerButton"
+                    data-toggle="collapse" data-target="#navbar-collapse--Main"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- FIN bouton "Burger" -->
+                <div class="collapse navbar-collapse nav--menu" id="navbar-collapse--Main">
+                    <!-- Menus 'permanents' -->
+                    <ul class="navbar-nav">
+                        <a class="nav-item btn-sm" href="{{ path('homepage_index') }}">Accueil</a>
+                        <a class="nav-item btn-sm" href="{{ path('driver_presentation') }}">Les pilotes</a>
+                        <a class="nav-item btn-sm" href="{{ path('flatrate_index') }}">Tarification/Paiement</a>
+                        <!-- Menus 'contextuels' -->
+                        {# Si l'utilisateur EST DEJA identifié #}
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <!-- page(s) profil utilisateur -->
+                        <a class="nav-item btn-sm" 
+                            {% if is_granted("ROLE_DRIVER") %}
+                            href="{{ path('profile_driver') }}"
+                            {% elseif is_granted("ROLE_CUSTOMER") %}
+                            href="{{ path('profile_customer') }}"
+                            {% else %}
+                            href="{{ path('profile_user', {'id': app.user.id}) }}"
+                            {% endif %}
+                        >
+                            <i class="ri-account-circle-line"></i>
+                            {{ app.user.firstname }} {{ app.user.lastname }}
+                        </a>
+                        <!-- page(s) profil administrateur -->
+                            {% if is_granted("ROLE_ADMIN") %}
+                        <a class="nav-item btn-sm" href="{{ path('admin_pending') }}">
+                            <i class="ri-admin-line"></i>
+                            Administration
+                        </a>
+                            {% endif %}
+                        <!-- Lien de déconnexion -->
+                        <a class="nav-item btn-sm" href="{{ path('security_logout') }}">
+                            <i class="ri-logout-circle-r-line"></i>
+                            Déconnexion
+                        </a>
+                        <!-- Si l'utilisateur N'est PAS encore identifié => connexion -->
+                        {% else %}
+                        <a class="nav-item btn-sm" href="{{ path('security_login') }}">
+                            <i class="ri-login-box-line"></i>
+                            Connexion
+                        </a>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </header>
@@ -143,15 +124,13 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-
-            <!-- API Google MAPS (INUTILE) -->
-            <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initMap&libraries=places,geometry&channel=GMPSB_locatorplus_v4_cABCDE" async defer></script> -->
         {% endblock %}
 
-        <div class="btn--action" id="uptotop" style='display:none;'><a href="#banner" title="title"><i class="ri-arrow-up-line"></i></a></div>
+        <div class="btn--action uptotop" id="uptotop1" style='display:none;'><a href="#" title="title"><i class="ri-arrow-up-line"></i></a></div>
+        <div class="btn--action uptotop" id="uptotop2" style='display:none;'><a href="#" title="title"><i class="ri-arrow-up-line"></i></a></div>
     </body>
 
-    <footer style="display:flex;flex:row;height:75px;font-weight: bolder;background-color: rgb(92, 89, 89);color:white;justify-content: center;align-items:center;">
+    <footer class="d-flex flex-column" id='app--footer' style="color:white;height:75px;font-weight:bolder;background-color:rgb(92, 89, 89);justify-content:center;align-items:center;">
         FOOTER de merde !....
     </footer>
 </html>
