--- a/templates/flatrate/_banner.html.twig
+++ b/templates/flatrate/_banner.html.twig
@@ -1,10 +1,12 @@
 <!-- DEBUT Flatrate Controller TEMPLATES banner -->
-<section class="flatrate--banner" id="banner" style="background-image:url({{ asset(sImgPath ~ 'banner/flatrate.jpg') }});">
+<section class="banner" id="flatrate--banner" style="background-image:url({{ asset(sImgPath ~ 'banner/flatrate.jpg') }});">
     <H1>TARIFS</H1>
-    
-    <a class="btn btn--ordering" href="{{ path('claim_create') }}" style="top:180px;">
+    <!--  -->
+    <a class="btn btn--ordering" href="{{ path('claim_create') }}" style="top:165px;">
         <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
     </a>
-
 </section>
 <!-- FIN Flatrate banner -->
+
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('_flash.html.twig') }}
