--- a/templates/mailer/confirmationregister.html.twig
+++ b/templates/mailer/confirmationregister.html.twig
@@ -8,7 +8,8 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style> -->
 
-<div class="modal--big-css pt-5">
+<div>
+<!-- <div class="modal--big-css pt-5"> -->
     <!-- <div class="modal--content"> -->
 <!-- <div class="container example-wrapper mt-5"> -->
         <h1 class="mt-5"> Courriel de validation de votre compte envoyé.</h1>
