--- a/templates/profile/_banner.html.twig
+++ b/templates/profile/_banner.html.twig
@@ -1,36 +1,44 @@
 <!-- DEBUT Profile Controller TEMPLATES banner -->
-<section class="profile--banner" id="banner" style="background-image:url({{ asset(sImgPath ~ 'banner/Profile.png') }});">
-    <H1>TABLEAU DE BORD</H1>
-    
+<section class="banner" id="profile--banner" style="background-image:url({{ asset(sImgPath ~ 'banner/Profile.png') }});">
+    <H1 id="banner">TABLEAU DE BORD</H1>
     <a class="btn btn--ordering" href="{{ path('claim_create') }}">
         <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
     </a>
-    
-    <!-- internal page menu, to navigate to ID -->
-    {% if app.user %}
-    <div id="nav--inpage">
-        {% if app.user %}
-        {#{% if "ROLE_USER" in app.user.roles %}#}
-        <a class="btn nav--btn--blue" href="{{ path('profile_user', {'id': app.user.id}) }}">L'utilisateur</a>
-        {% endif %}
-        <!-- -->
-        {% if app.user.customer %}
-        {#{% if "ROLE_CUSTOMER" in app.user.roles %}#}
-        <a class="btn nav--btn--blue" href="{{ path('profile_customer') }}">Le client</a>
-        {% endif %}
-        <div>
-            {#{{ dump('app.user : ') }}{{ dump(app.user) }}#}
-            {#{{ dump('app.user.driver : ') }}{{ dump(app.user.driver) }}#}
-            {#{{ dump('app.user.driver.company : ') }}{{ dump(app.user.driver.company) }}#}
-        </div>
-        {% if app.user.driver %}
-        {#{% if "ROLE_DRIVER" in app.user.roles %}#}
-        <a class="btn nav--btn--blue" href="{{ path('profile_driver') }}">Le professionnel</a>
-        {% else %}
-        {#{% elseif not app.user.driver %}#}
-        <a class="btn nav--inpage-btn-important" href="{{ path('registration_driver', {'id': app.user.id}) }}">Créer un compte pilote VMDTR</a>
-        {% endif %}
-    </div>
-    {% endif %}
 </section>
+
+<!-- Menu de navigation 'interne' -->
+{% if app.user %}
+<div class="navbar navbar-expand-lg navbar-light bg-light w-100" id="nav--inpage">
+    <!-- DEBUT bouton "Burger" -->
+    <button class="navbar-toggler" type="button" title="BurgerButton"
+        data-toggle="collapse" data-target="#navbar-collapse-inpage"
+    >
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- FIN bouton "Burger" -->
+    <div class="collapse navbar-collapse nav--inpage" id="navbar-collapse-inpage">
+        <ul class="navbar-nav">
+            <!-- Accès à l'historique DU CLIENT -->
+            {% if app.user.customer %}
+            <a class="btn nav--btn--blue" href="{{ path('profile_customer') }}">Le client</a>
+            {% endif %}
+            <!-- Accès à l'historique DU PILOTE -->
+            {% if app.user.driver %}
+            <a class="btn nav--btn--blue" href="{{ path('profile_driver') }}">Le professionnel</a>
+            {% endif %}
+            <!--  -->
+            {% if app.user %}
+            <a class="btn nav--btn--blue" href="{{ path('profile_user', {'id': app.user.id}) }}">
+                <i class="fas fa-user-cog"></i>
+                Infos personnelles
+            </a>
+            {% endif %}
+        </ul>
+    </div>
+</div>
+{% endif %}
+
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('_flash.html.twig') }}
+
 <!-- FIN Profile banner -->
