--- a/templates/profile/customer.html.twig
+++ b/templates/profile/customer.html.twig
@@ -9,92 +9,18 @@
 
     <div id="div--2hide-ifmodal">
         {{ include('profile/_banner.html.twig') }}
-        
-        <!-- Zone d'affichage des messages "FLASH" venant du Controller -->
-        {{ include('_flash.html.twig') }}
 
         <!-- Zone de stockage des données issues de JSON, à l'attention de Javascript -->
         {{ include('geography/_FromJSON4Javascript.html.twig') }}
         
         <div class="paragraph--large" id="div--2hide-ifmodal">
-        
-            <!-- L'adresse postale -->
-            <form class="card--3D-vertical my-4" method="post"><!--class="d-flex flex-row justify-content-center my-4">-->
-                <h2 class="h3 ml-4 mt-4 mb-3 font-weight-normal">Adresse personnelle :</h2>
-                <!-- Bloc adresse du Customer -->
-                <div class="block--datas-horizontal mx-3">
-                    <div class="col-12 col-md-5">
-                        <label class="required" for="inputroad">N° et Voie :</label>
-                        <input type="text" class="form-control" id="inputroad"
-                            value="{{ app.user.customer.road }}"
-                            name="customer_road" required
-                        ><!-- autofocus> -->
-                        {% if error_customer_road is defined and error_customer_road is not null %}
-                        <span class="d-block">
-                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
-                            <small class="form-error-message">La voie doit comporter un numéro et un nom.</small>
-                        </span>
-                        {% endif %}
-                        <!-- &nbsp; -->
-                    </div>
-                    &nbsp;
-                    <div class="col-12 col-md-3">
-                        <label class="required" for="inputcity">Commune :</label>
-                        <input type="text" class="form-control inputcity" id="inputcity"
-                            value="{{ app.user.customer.city }}"
-                            name="customer_city"
-                        >
-                        <!-- required -->
-                        <select class="form-control cities" id="inputcities"
-                            name="cities" title="cities"
-                        >
-                            <option value="">-- Sélectionnez votre commune --</option>
-                        </select>
-                        {% if error_customer_city is defined and error_customer_city is not null %}
-                        <span class="d-block">
-                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
-                            <small class="form-error-message">La ville doit-être spécifiée.</small>
-                        </span>
-                        {% endif %}
-                    </div>
-                    &nbsp;
-                    <div class="col-12 col-md-3">
-                        <label class="required" for="inputzip">Code postal :</label>
-                        <input type="text" class="form-control" id="inputzip"
-                            value="{{ app.user.customer.zip }}"
-                            name="customer_zip" style="display:none;"
-                        >
-                        <!-- -->
-                        <input type="text" class="form-control inputzip" id="inputzip2"
-                            value="{{ app.user.customer.zip }}"
-                            name="customer_zip" disabled
-                        >
-                        {#{% if error_customer_zip %}#}
-                        <!-- <span class="d-block">
-                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
-                            <small class="form-error-message">La voie doit comporter un numéro et un nom.</small>
-                        </span> -->
-                        {#{% endif %}#}
-                    </div>
-                </div>
-                <br>
-                <!-- rangée de bouton(s) : Mise à jour adresse -->
-                <div class="btns--row">
-                    <button class="btn btn-sm btn--blue" type="submit">
-                        <i class="ri-record-circle-line"></i>&ensp;Enregistrer les modifications
-                    </button>
-                    {#<!-- <a class="btn btn-sm btn--secondary" href="{{ path('profile_user',{'id': app.user.id}) }}">
-                        <i class="fas fa-times"></i>&ensp;Annuler
-                    </a> -->#}
-                </div>
-            </form>
 
             <!-- L'historique des échanges -->
             <div class="d-flex flex-row flex-wrap justify-content-between align-items-center mb-3">
-                <h2 class="h3 mt-4 mb-3 font-weight-normal">Historique des échanges :</h2>
+                <h2 class="title--h2 mb-3">Echanges avec les pilotes :</h2>
 
                 <!-- Affiche dépendant de l'existance de données de plus d'un an -->
-                <button class="btn btn-sm btn--green" ><!--id="btn--show-hide--archive"-->
+                <button class="btn btn-sm btn--green" style="color:red;"><!--id="btn--show-hide--archive"-->
                     <i class="far fa-eye"></i>&ensp;A DEVELOPPER
                 </button>
 
@@ -105,7 +31,7 @@
                 <div class="btn--tabtype" id="btn--tabtype--order" parent_id="row--tabtype--travel">Courses effectuées</div>
             </div>
             <!-- tableau des Demandes envoyées (Claims) -->
-            <table class="table table-striped table--tabtype" id="table--tabtype--claim" parent_id="btn--tabtype--claim">
+            <table class="table table-striped block--tabtype" id="block--tabtype--claim" parent_id="btn--tabtype--claim">
                 <thead class="thead--dark--CANCELED">
                     <tr>
                         <th></th>
@@ -114,7 +40,7 @@
                         <th>Course pour le</th>
                         <th>Prise en charge</th>
                         <th>Destination</th>
-                        <th>Actions</th>
+                        <th>Etat/Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -139,25 +65,22 @@
                                 {{ getcitybyzip(claim.tozip).name }}
                             {% endif %}
                         </td>
-                        <td>
+                        <td style="align-items:center;">
                             <div class="d-flex flex-row flex-wrap align-items-center">
+                                <div style="align-items:center;">
+                                    <i class="ri-mail-send-line" title="Nb. de pilote(s) destinataire(s)"></i> {{ claim.drivers|length }}
+                                    {#<!-- <i class="far fa-paper-plane"> {{ claim.drivers|length }}</i> -->#}
+                                </div>
+                                &ensp;
+                                <div {% if claim.tenders|length == 0 %}style="color:red;"{% else %}style="color:green;"{% endif %}>
+                                    <i class="fas fa-inbox" title="Nb. de devis(s) reçu(s) en retour"></i> {{ claim.tenders|length }}
+                                </div>
+                                {#<!-- <i class="ri-folder-received-line"> {{ claim.tenders|length }}</i> -->#}
+                                &emsp;
                                 <!-- bouton VOIR DETAILS -->
                                 <button class="btn btn-sm btn--action btn--showmodal" id="{{ 'btn--showmodal'~claim.id }}" data_id="{{ claim.id }}" data_type="claim">
                                     <i class="far fa-eye" title="Voir en détails"></i><!--&ensp;Détails-->
                                 </button>
-                            &ensp; + autre chose ???
-                                {% if claim.tenders|length < 0 %}
-                                &ensp;
-                                {#
-                                {% if claim.tenders|length > 0 %}
-                                <button class="btn btn-sm btn--blue" data_id="{{ claim.id }}" data_type="claim">
-                                    <i class="ri-file-paper-2-line"></i>&ensp;{{ claim.tenders|length }}&ensp;Devis
-                                </button>
-                                <!-- id="btn--claim--viewtenders" -->
-                                {% else %}
-                                #}
-                                Aucun devis proposé
-                                {% endif %}
                             </div>
                         </td>
                     </tr>
@@ -167,9 +90,9 @@
                     <tr>
                         <td colspan="7">
                             {% if app.user.customer.getclaims|length == 0 %}
-                            Vous n'avez fait encore aucune demande...
+                            Vous n'avez fait encore aucune demande...&emsp;
                             {% endif %}
-                            <a class="btn btn-sm btn--blue" href="{{ path('claim_create') }}">
+                            <a class="btn btn-sm btn--red" href="{{ path('claim_create') }}">
                                 <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
                             </a>
                         </td>
@@ -177,12 +100,12 @@
                 </tfoot>
             </table>
             <!-- tableau des Devis reçus (Tenders) -->
-            <table class="table table-striped--CANCELED table--tabtype" id="table--tabtype--tender" parent_id="btn--tabtype--tender">
+            <table class="table table-striped--CANCELED block--tabtype" id="block--tabtype--tender" parent_id="btn--tabtype--tender">
                 <thead class="thead--dark--CANCELED">
                     <tr>
                         <th></th>
-                        <th>Devis n° / du</th>
                         <th>Demande n° / du</th>
+                        <th>Devis n° / du</th>
                         <th>Prise en charge</th>
                         <th>Destination</th>
                         <th>Au tarif de (&euro;)</th>
@@ -207,20 +130,22 @@
                         {% for tender in claim.tenders|reverse %}
                     <tr class="row--tab row--tender" style="{{ 'background-color:' ~ bc4tr ~ ';' }}" parent_id="btn--tabtype--tender">
                         <td></td>
-                        <td>#{{ tender.id }} / {{ tender.tenderdatetime|date('d/m/Y') }}</td>
                         <td>#{{ tender.claim.id }} / {{ tender.claim.claimdatetime|date('d/m/Y') }}</td>
+                        <td>#{{ tender.id }} / {{ tender.tenderdatetime|date('d/m/Y') }}</td>
                         <td>
                             {% if tender.claim.remarkableplacefrom != null %}
                             {{ tender.claim.remarkableplacefrom.label }}
                             {% else %}
-                            {{ tender.claim.fromroad~', '~tender.claim.fromzip~' '~tender.claim.fromcity }}
+                            {{ tender.claim.fromcity }}
+                            {#<!-- {{ tender.claim.fromroad~', '~tender.claim.fromzip~' '~tender.claim.fromcity }} -->#}
                             {% endif %}
                         </td>
                         <td>
                             {% if tender.claim.remarkableplaceto != null %}
                             {{ tender.claim.remarkableplaceto.label }}
                             {% else %}
-                            {{ tender.claim.toroad~', '~tender.claim.tozip~' '~tender.claim.tocity }}
+                            {{ tender.claim.tocity }}
+                            {#<!-- {{ tender.claim.toroad~', '~tender.claim.tozip~' '~tender.claim.tocity }} -->#}
                             {% endif %}
                         </td>
                         <td><b>{{ tender.price }}</b></td>
@@ -232,34 +157,6 @@
                                 >
                                     <i class="far fa-eye" title="Voir le devis"></i>
                                 </a>
-                            &emsp;+ autre action ?
-                                {#
-                                &emsp;
-                                {% set obStatus=getstatus4claimanddriver(claim, driver) %}
-                                <!-- bouton LU/NON-LU -->
-                                {% if obStatus is defined and obStatus.status.value < 4 %}
-                                <a class="btn btn-sm btn--action"
-                                    href="{{ path('driver_switchclaimstatus_viewed', {'id':obStatus.id}) }}"
-                                >
-                                    {% if obStatus is defined and obStatus.status.value==0 %}
-                                    <i class="fas fa-envelope" style="color:red;" title="NON-LUE, marquer LUE"></i>
-                                    {% else %}
-                                    <i class="fas fa-envelope-open-text" style="color:green;" title="LUE, marquer Non-lue"></i>
-                                    {% endif %}
-                                </a>
-                                &emsp;
-                                {% endif %}
-                                <!-- Archivage/Réactualisation (seulement si réponse (Tender) envoyée) -->
-                                {% if obStatus is defined and obStatus.status.value >= 2 %}
-                                <button class="btn btn-sm btn--action">
-                                    {% if obStatus is defined and obStatus.status.value < 3 %}
-                                    <i class="fas fa-inbox" title="Actif => archiver"></i>
-                                    {% else %}
-                                    <i class="fas fa-file-archive" style="color:blue;" title="Archivé => réactualiser"></i>
-                                    {% endif %}
-                                </button>
-                                {% endif %}
-                                #}
                             </div>
                         </td>
                     </tr>
@@ -273,7 +170,7 @@
                 </tfoot>
             </table>
             <!-- tableau des Courses effectuées (Orders) -->
-            <table class="table table-striped--CANCELED table--tabtype" id="table--tabtype--order" parent_id="btn--tabtype--order">
+            <table class="table table-striped--CANCELED block--tabtype" id="block--tabtype--order" parent_id="btn--tabtype--order">
                 <thead class="thead--dark--CANCELED">
                     <tr>
                         <th></th>
@@ -308,6 +205,89 @@
                     {% endif %}
                 </tfoot>
             </table>
+
+
+
+
+
+
+
+
+        
+            <!-- L'adresse postale -->
+            {#<!--
+            <form class="card--3D-vertical my-4" method="post"><!- -class="d-flex flex-row justify-content-center my-4">- ->
+                <h2 class="h3 ml-4 mt-4 mb-3 font-weight-normal">Adresse personnelle :</h2>
+                <!- - Bloc adresse du Customer - ->
+                <div class="block--datas-horizontal mx-3">
+                    <div class="col-12 col-md-5">
+                        <label class="required" for="inputroad">N° et Voie :</label>
+                        <input type="text" class="form-control" id="inputroad"
+                            value="{{ app.user.customer.road }}"
+                            name="customer_road" required
+                        ><!- - autofocus> - ->
+                        {% if error_customer_road is defined and error_customer_road is not null %}
+                        <span class="d-block">
+                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                            <small class="form-error-message">La voie doit comporter un numéro et un nom.</small>
+                        </span>
+                        {% endif %}
+                        <!- - &nbsp; - ->
+                    </div>
+                    &nbsp;
+                    <div class="col-12 col-md-3">
+                        <label class="required" for="inputcity">Commune :</label>
+                        <input type="text" class="form-control inputcity" id="inputcity"
+                            value="{{ app.user.customer.city }}"
+                            name="customer_city"
+                        >
+                        <!- - required - ->
+                        <select class="form-control cities" id="inputcities"
+                            name="cities" title="cities"
+                        >
+                            <option value="">-- Sélectionnez votre commune --</option>
+                        </select>
+                        {% if error_customer_city is defined and error_customer_city is not null %}
+                        <span class="d-block">
+                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                            <small class="form-error-message">La ville doit-être spécifiée.</small>
+                        </span>
+                        {% endif %}
+                    </div>
+                    &nbsp;
+                    <div class="col-12 col-md-3">
+                        <label class="required" for="inputzip">Code postal :</label>
+                        <input type="text" class="form-control" id="inputzip"
+                            value="{{ app.user.customer.zip }}"
+                            name="customer_zip" style="display:none;"
+                        >
+                        <!- - - ->
+                        <input type="text" class="form-control inputzip" id="inputzip2"
+                            value="{{ app.user.customer.zip }}"
+                            name="customer_zip" disabled
+                        >
+                        { #{% if error_customer_zip %}# }
+                        <!- - <span class="d-block">
+                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                            <small class="form-error-message">La voie doit comporter un numéro et un nom.</small>
+                        </span> - ->
+                        { #{% endif %}# }
+                    </div>
+                </div>
+                <br>
+                <!- - rangée de bouton(s) : Mise à jour adresse - ->
+                <div class="btns--row">
+                    <button class="btn btn-sm btn--blue" type="submit">
+                        <i class="ri-record-circle-line"></i>&ensp;Enregistrer les modifications
+                    </button>
+                    { #<!- - <a class="btn btn-sm btn--secondary" href="{{ path('profile_user',{'id': app.user.id}) }}">
+                        <i class="fas fa-times"></i>&ensp;Annuler
+                    </a> - -># }
+                </div>
+            </form>
+            -->#}
+
+
         </div>
     </div>
 
